--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.18",
+    "@expo/webpack-config": "^18.0.1",
+    "expo": "^48.0.19",
     "expo-status-bar": "~1.4.4",
     "paho-mqtt": "^1.1.0",
     "react": "18.2.0",
